--- a/templates/home.html
+++ b/templates/home.html
@@ -4,54 +4,54 @@
 {% from 'helpers.html' import products_macro with context %}
 
 
-{% block navbar %}
-    <nav class="navbar ct-navbar yamm ct-navbar--fadeIn ct-navbar-onepage navbar-transparent" role="navigation">
-        <div class="container">
-            <div class="ct-navbarContainer">
-                <div class="navbar-header">
-
-                    <a class="navbar-brand" href="{{ url_for('index') }}">
-                        <img id="ct-js-logo"
-                             src="{{ url_for('static',filename="image/logo.png") }}"
-                             alt="FISHtank"
-                             width="49px">
-                    </a>
-                </div>
-                <ul class="nav navbar-nav">
-                    <li><a href="{{ url_for("index") }}">Главная</a></li>
-                    <li><a href="{{ url_for("popular_product") }}">Каталог</a></li>
-                    <li><a href="{{ url_for("last_posts") }}">Блог</a></li>
-                </ul>
-                <ul class="nav navbar-nav yamm ct-navbar--right">
-                    {% if current_user.is_authenticated %}
-                        <li>
-                            <a id="navbar-avatar" href="{{ url_for('user', username = current_user.username) }}">
-                                {% if current_user.avatar_min %}
-                                    <img src="{{ url_for('uploaded_file',filename=current_user.avatar_min) }}"/>
-                                {% else %}
-                                    <img src="{{ url_for('static',filename="image/min_icon-user-default.png") }}"/>
-                                {% endif %}
-                            </a>
-                        </li>
-                        <li>
-                            <a href="{{ url_for('user', username = current_user.username) }}">{{ current_user.username }}</a>
-                        </li>
-                        <li>
-                            <a href="{{ url_for('security.logout') }}">Выйти</a>
-                        </li>
-                    {% else %}
-                        <li>
-                            <a href="{{ url_for('security.login') }}">Войти</a>
-                        </li>
-                        <li>
-                            <a href="{{ url_for('security.register') }}">Регистрация</a>
-                        </li>
-                    {% endif %}
-
-                </ul>
-            </div>
-        </div>
-    </nav>{% endblock %}
+{#{% block navbar %}#}
+{#    <nav class="navbar ct-navbar yamm ct-navbar--fadeIn ct-navbar-onepage navbar-transparent" role="navigation">#}
+{#        <div class="container">#}
+{#            <div class="ct-navbarContainer">#}
+{#                <div class="navbar-header">#}
+{##}
+{#                    <a class="navbar-brand" href="{{ url_for('index') }}">#}
+{#                        <img id="ct-js-logo"#}
+{#                             src="{{ url_for('static',filename="image/logo.png") }}"#}
+{#                             alt="FISHtank"#}
+{#                             width="49px">#}
+{#                    </a>#}
+{#                </div>#}
+{#                <ul class="nav navbar-nav">#}
+{#                    <li><a href="{{ url_for("index") }}">Главная</a></li>#}
+{#                    <li><a href="{{ url_for("popular_product") }}">Каталог</a></li>#}
+{#                    <li><a href="{{ url_for("last_posts") }}">Блог</a></li>#}
+{#                </ul>#}
+{#                <ul class="nav navbar-nav yamm ct-navbar--right">#}
+{#                    {% if current_user.is_authenticated %}#}
+{#                        <li>#}
+{#                            <a id="navbar-avatar" href="{{ url_for('user', username = current_user.username) }}">#}
+{#                                {% if current_user.avatar_min %}#}
+{#                                    <img src="{{ url_for('uploaded_file',filename=current_user.avatar_min) }}"/>#}
+{#                                {% else %}#}
+{#                                    <img src="{{ url_for('static',filename="image/min_icon-user-default.png") }}"/>#}
+{#                                {% endif %}#}
+{#                            </a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="{{ url_for('user', username = current_user.username) }}">{{ current_user.username }}</a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="{{ url_for('security.logout') }}">Выйти</a>#}
+{#                        </li>#}
+{#                    {% else %}#}
+{#                        <li>#}
+{#                            <a href="{{ url_for('security.login') }}">Войти</a>#}
+{#                        </li>#}
+{#                        <li>#}
+{#                            <a href="{{ url_for('security.register') }}">Регистрация</a>#}
+{#                        </li>#}
+{#                    {% endif %}#}
+{##}
+{#                </ul>#}
+{#            </div>#}
+{#        </div>#}
+{#    </nav>{% endblock %}#}
 {% block body %}
     <div class="section"></div>
 
@@ -223,10 +223,15 @@
     <script>
         $(document).ready(function () {
             var $bodyel = jQuery("body");
+             var $navel = jQuery("nav");
+             $navel.addClass("ct-navbar-onepage navbar-transparent");
+
+             $navel.removeClass("navbar-default");
             $bodyel.addClass("cssAnimate ct-js-navbarMakeSmaller ct-navbar-isTransparent-toDefault");
         });
 
         jQuery(window).on("load", function () {
+
 
 
             if ($().masonry && ($('.ct-js-blogMasonry').length > 0) && ($devicewidth > 767)) {
