--- a/templates/users_notifications.html
+++ b/templates/users_notifications.html
@@ -12,16 +12,18 @@
             <div class="row">
                 <div class="col-xs-offset-1 col-xs-10 col-md-offset-2 col-md-8">
                     {%  for notification in notifications %}
+                        <div class="notification{{ notification.closed }}">
                         {% if notification.name == "comment_on_post" %}
                         <p>{{ info[notification.id]["sender_name"] }} ответила на ваш пост
                             <a href="{{ url_for("singlepost", postid = info[notification.id]["post_id"], _anchor='comment' + info[notification.id]["comment_id"]|string )}}">{{ info[notification.id]["post_title"] }}</a>
-                        on {{ notification.timestamp }}
+                        в {{ notification.timestamp|timezone }}
                         </p>
                         {% elif notification.name == "comment_on_post_comment"  %}
                             <p>{{ info[notification.id]["sender_name"] }} ответила на ваш комментарий к посту
                             <a href="{{ url_for("singlepost", postid = info[notification.id]["post_id"], _anchor='comment' + info[notification.id]["comment_id"]|string )}}">{{ info[notification.id]["post_title"] }}</a>
-                        on {{ notification.timestamp }}
+                        в {{ notification.timestamp|timezone }}
                         </p>
+                            </div>
 
                         {%  endif %}
                    {% endfor %}
