--- a/templates/dialogs.html
+++ b/templates/dialogs.html
@@ -3,6 +3,20 @@
 {% block body %}
     <div class="container">
         <div class="row">
+        {% if dialogs|length ==0 %}
+            <h1 class="text-center">
+            У вас пока нет диалогов
+                                                        <img src="{{ url_for('static',filename= "image/empty_dialogs.png") }}" width="300"/>
+
+            </h1>
+<div class="col-md-12 col-xs-12" >
+ <p class="ct-u-size26 ct-u-paddingBoth12">
+     Посмотрите <a href="{{ url_for("all_users") }}">список форумчанинов.</a> Может, вы захотите написать кому-то?
+            </p>
+</div>
+
+        {% else %}
+
             <div class="col-md-4 col-xs-12" id="dialogs-container">
                 {% for dialog in dialogs %}
                     <div class="one-dialog" id= {{ dialog.id }}>
@@ -59,6 +73,7 @@
 
                     </div>
                 {% endfor %}
+            <i id = {{ send_to_user }}></i>
             </div>
         <div class="ct-messageMobile">
                             <div class="ct-messageNavbarMobile ct-messageNavbarMobile--header">
@@ -80,7 +95,7 @@
 
 
             </div>
-
+{% endif %}
         </div>
     </div>
 
@@ -102,13 +117,15 @@
             else{
                      $("#messages_box").html(data.messages);
                      console.log(".one-dialog#"+ data.dialog_id + " textbox p i");
-                     {# id dialog wasn't read by the user, delete cicrle not-read #}
+
+
+                 }
+
+                 {# id dialog wasn't read by the user, delete cicrle not-read #}
                       if ($("#circle"+ data.dialog_id).hasClass("circle-not-read-self")){
             $("#circle"+ data.dialog_id).removeClass("circle-not-read-self fa fa-circle");
 
                 }
-
-                 }
 
 
 
