--- a/templates/user.html
+++ b/templates/user.html
@@ -26,7 +26,7 @@
 
             </div>
             <div class="ct-u-floatRight" id ="open_mesage">
-                Сообщение  {{ rating }}<i class="fa fa-envelope"></i>
+                Сообщение <i class="fa fa-envelope"></i>
             </div>
         </div>
 
