--- a/templates/helpers.html
+++ b/templates/helpers.html
@@ -389,7 +389,7 @@ all comment to product on page "single_product"
 
             {% if post.image %}
 
-                <img src="{{ url_for('uploaded_file',filename=post.image) }}"/><br>
+                <img class="post-grid-img" src="{{ url_for('uploaded_file',filename=post.image) }}"/><br>
                 <p>
                 {{ post.body|truncate(170, True) }}
                 </p>
