--- a/templates/popular_product.html
+++ b/templates/popular_product.html
@@ -35,38 +35,40 @@
     </div>
 
 {% if products|length >= 1 %}
-            <div class="row">
 
-                <div class="sort_box">
+
+                <div class="sort_box ct-u-marginBottom10">
+                 <ul class="list-unstyled list-inline ct-u-paddingTop5">
+                <li><span class="ct-u-motiveDark ct-fw-600">Сортировать по: </span></li>
+
                     {% if sort == "rating" %}
-                        <div class="sort-left col-md-6 col-sm-6">
 
-                            <a href="{{ url_for('popular_product', sort = 'rating') }}">
-                                <h4 class="ct-u-size30 active">Популярные</h4>
-                            </a>
+                        <li>
 
-                        </div>
-                        <div class="sort-right col-md-6 col-sm-6">
-                            <a href="{{ url_for('popular_product', sort = 'data') }}" class="ct-u-floatLeft">
-                                <h4 class="ct-u-size30">Последние</h4>
+                            <a href="{{ url_for('popular_product', sort = 'rating') }}"
+                                 class="active">Популярные
                             </a>
-                        </div>
+</li>
+                        <li>
+                            <a href="{{ url_for('popular_product', sort = 'data') }}"
+                                class="">Последние
+                            </a>
+                        </li>
                     {% else %}
-                        <div class="sort-left col-md-6 col-sm-6">
-
-                            <a href="{{ url_for('popular_product', sort = 'rating') }}">
-                                <h4 class="ct-u-size30">популярные</h4>
+<li>
+                            <a href="{{ url_for('popular_product', sort = 'rating') }}">популярные
                             </a>
-                        </div>
-                        <div class="sort-right col-md-6 col-sm-6">
-                            <a href="{{ url_for('popular_product', sort = 'data') }}" class="ct-u-floatLeft">
-                                <h4 class="ct-u-size30 active">последние</h4>
+                        </li>
+                        <li>
+                            <a href="{{ url_for('popular_product', sort = 'data') }}"
+                                class="active">последние
                             </a>
-                        </div>
+                        </li>
                     {% endif %}
+                        </ul>
 
                 </div>
-
+<div class="row">
                 <div id="product_container">
                     <div class="ct-product">
                         {% for product in products %}
