--- a/templates/user.html
+++ b/templates/user.html
@@ -13,7 +13,7 @@
 
 
             </div>
-        <div class="col-md-offset-4 col-md-4">
+        <div class="col-md-offset-4 col-md-4 ct-u-overflow-auto">
             <div class="ct-u-floatLeft">
                  <i type="button" data-container="body" data-toggle="popover" data-placement="bottom"
                                                  data-content="Рейтинговая система основывается на ваших голосах,которые вы получили за посты и комментарии к постам.
@@ -46,10 +46,10 @@
         </div>
     <form action="{{ url_for('send_message', postid=post_id, parent=parent_id) }}" method="post" enctype="multipart/form-data" class="user_message_form">
     {{ form.hidden_tag() }}
-    <div class="form-group col-xs-9 col-sm-10 answer-textarea">
+    <div class="form-group col-xs-10 col-sm-10 answer-textarea">
         {{ form.text(class_="form-control", rows="3") }}
     </div>
-    <div id="hide" class="form-group col-xs-3 col-sm-2 mobile-form-group">
+    <div id="hide" class="form-group col-xs-2 col-sm-2 mobile-form-group">
         <label class="hand-cursor">
             {{ form.file(class="comment-file") }}
             <span class="fa fa-camera"></span>
@@ -139,7 +139,8 @@
         <div class="row">
 
         <div class="user-activities panel-group">
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            {% if profile_settings["show_posts"] %}
+            <div class="col-xs-12 col-sm-6 col-md-{{ col_md }}">
 
                     <div class="panel panel-default">
                         <div class="panel-heading">
@@ -155,7 +156,9 @@
 
 
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+        {% endif %}
+            {% if  profile_settings["show_comments"] %}
+            <div class="col-xs-12 col-sm-6 col-md-{{ col_md }}">
                 <div class="panel panel-default">
                         <div class="panel-heading">
                           <div class="panel-title">
@@ -172,8 +175,10 @@
                         </div>
                 </div>
             </div>
+                {% endif %}
+                        {% if  profile_settings["show_products"] %}
 
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            <div class="col-xs-12 col-sm-6 col-md-{{ col_md }}">
                 <div class="panel panel-default">
                         <div class="panel-heading">
                           <div class="panel-title">
@@ -185,7 +190,10 @@
                         </div>
                 </div>
             </div>
-            <div class="col-xs-12 col-sm-6 col-md-3">
+            {% endif %}
+                        {% if  profile_settings["show_saved"] %}
+
+            <div class="col-xs-12 col-sm-6 col-md-{{ col_md }}">
                 <div class="panel panel-default">
                         <div class="panel-heading">
                           <div class="panel-title">
@@ -202,6 +210,8 @@
                         </div>
             </div>
             </div>
+        {% endif %}
+
 
 
             </div>
