--- a/templates/users_notifications.html
+++ b/templates/users_notifications.html
@@ -14,12 +14,12 @@
                     {%  for notification in notifications %}
                         <div class="notification{{ notification.closed }}">
                         {% if notification.name == "comment_on_post" %}
-                        <p>{{ info[notification.id]["sender_name"] }} ответила на ваш пост
+                        <p>{{ info[notification.id]["sender_name"] }} ответил(а) на ваш пост
                             <a href="{{ url_for("singlepost", postid = info[notification.id]["post_id"], _anchor='comment' + info[notification.id]["comment_id"]|string )}}">{{ info[notification.id]["post_title"] }}</a>
                         в {{ notification.timestamp|timezone }}
                         </p>
                         {% elif notification.name == "comment_on_post_comment"  %}
-                            <p>{{ info[notification.id]["sender_name"] }} ответила на ваш комментарий к посту
+                            <p>{{ info[notification.id]["sender_name"] }} ответил(а) на ваш комментарий к посту
                             <a href="{{ url_for("singlepost", postid = info[notification.id]["post_id"], _anchor='comment' + info[notification.id]["comment_id"]|string )}}">{{ info[notification.id]["post_title"] }}</a>
                         в {{ notification.timestamp|timezone }}
                         </p>
